--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
-/* SPDX-FileCopyrightText: 2025 LibreCode coop and contributors */
-/* SPDX-License-Identifier: AGPL-3.0-or-later */
+/**
+ * SPDX-FileCopyrightText: 2025 LibreCode coop and contributors
+ * SPDX-License-Identifier: AGPL-3.0-or-later
+ */
 
 .icon-extract {
 	background-image: url("../img/extracticon.svg");
